# deployez_un_modele_de_machine_learning

./: .gitignore  README.md  check_db_data.py  main.py  mkdocs.yml  model.pkl  pyproject.toml  requirements.txt  seed_db.py  setup_db.py  test.db
.github/workflows/: cd.yml  ci.yml
Requête SQL/databases/: ajout_privileges_production.txt  ajout_privileges_staging.txt  creation_db_production.txt  creation_db_staging.txt
Requête SQL/données/: cleanDataset_for_training.csv  training_dataset_sample.csv  training_dataset_sample_sans_cible.csv
Requête SQL/tables/: inputs.txt  insertion_training_dataset.txt  interaction_logs.txt  predictions.txt  training_dataset.txt
Requête SQL/users/: creation_production-user_postgres.txt  creation_sa_postgres.txt  creation_staging-user_postgres.txt
app/: main.py
app/api/: routes.py
app/db/: crud.py  database.py  models.py
app/schemas/: input.py
app/services/: meta_service.py  model_manager.py  predictor.py  trainer.py
configuration/: .env.exemple
docs/: api.md  configuration.md  index.md  maintenance.md  model.md
storage/history/: model_20260507_121226.pkl
tests/: conftest.py  test_app.py  test_dump_brain.py  test_health.py  test_model_manager_unit.py  test_predict.py  test_predict_csv.py  test_root.py  test_show_list.py  test_train.py  test_trainer_unit.py
train/: train_model.py
