[project]
name = "deployez-un-modele-de-machine-learning"
version = "0.1.0"
description = "OpenClassrooms | P5 : Déployez un modèle de Machine Learning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "fastapi>=0.136.1",
    "flake8>=7.3.0",
    "joblib>=1.5.3",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
